forgot in last commit. also forgot to mention that guuey-text-input was changed to remove firebase element and reflects value to parent.

--- a/src/pages/care-plan/su-pre/su-pre.html
+++ b/src/pages/care-plan/su-pre/su-pre.html
@@ -99,85 +99,84 @@
           </guuey-custom-text-input>
         </template>
         <guuey-text-input
-          route="/homes/[[home]]/patients/[[patient]]/preAdmissionAssessment/requestReferralSummary"
+          value="{{assmtData.requestReferralSummary}}"
           label="Summary of Request for Referral"
           label2="By Referee">
         </guuey-text-input>
 
         <guuey-text-input
-          route="/homes/[[home]]/patients/[[patient]]/preAdmissionAssessment/suCurrentStatusView"
+          value="{{assmtData.suCurrentStatusView}}"
           label="Service User View of Current Status"
           label2="i.e. what led to current admission">
         </guuey-text-input>
 
         <guuey-text-input
-          route="/homes/[[home]]/patients/[[patient]]/preAdmissionAssessment/staffPatientWardViews"
+          value="{{assmtData.staffPatientWardViews}}"
           label="Views of Staff on Ward of Patient"
           label2="Including what he/she does while on ward">
         </guuey-text-input>
 
         <guuey-text-input
-          route="/homes/[[home]]/patients/[[patient]]/preAdmissionAssessment/offenceIndex"
+          value="{{assmtData.offenceIndex}}"
           label="Index Offence"
           label2="What did you do to end up here?">
         </guuey-text-input>
 
         <guuey-text-input
-          route="/homes/[[home]]/patients/[[patient]]/preAdmissionAssessment/legalStatus"
-          label="Legal Status"
-          label2="">
+          value="{{assmtData.legalStatus}}"
+          label="Legal Status">
         </guuey-text-input>
 
         <guuey-text-input
-          route="/homes/[[home]]/patients/[[patient]]/preAdmissionAssessment/mentalIllnessDiagnosis"
+          value="{{assmtData.mentalIllnessDiagnosis}}"
           label="Mental Illness & Diagnosis"
           label2="According to the Professional">
         </guuey-text-input>
 
         <guuey-text-input
-          route="/homes/[[home]]/patients/[[patient]]/preAdmissionAssessment/currentMentalState"
+          value="{{assmtData.currentMentalState}}"
           label="Current Mental State"
           label2="As described or percieved by patient">
         </guuey-text-input>
 
         <guuey-text-input
-          route="/homes/[[home]]/patients/[[patient]]/preAdmissionAssessment/suMentalStatePresentation"
+          value="{{assmtData.suMentalStatePresentation}}"
           label="Mental State Presentation to Assessor"
           label2="">
         </guuey-text-input>
 
         <guuey-text-input
-          route="/homes/[[home]]/patients/[[patient]]/preAdmissionAssessment/mentalHealthTrigger"
+          value="{{assmtData.mentalHealthTrigger}}"
           label="Mental Health Trigger"
           label2="What do you experience when becoming unwell?">
         </guuey-text-input>
 
         <guuey-text-input
-          route="/homes/[[home]]/patients/[[patient]]/preAdmissionAssessment/currentMedication"
+          value="{{assmtData.currentMedication}}"
           label="Current Medication"
           label2="">
         </guuey-text-input>
 
         <guuey-text-input
-          route="/homes/[[home]]/patients/[[patient]]/preAdmissionAssessment/medicationManagement"
+          value="{{assmtData.medicationManagement}}"
           label="Medication Management"
           label2="i.e. history or non-compliance and compliance">
         </guuey-text-input>
 
         <guuey-text-input
-          route="/homes/[[home]]/patients/[[patient]]/preAdmissionAssessment/sleepPattern"
+          value="{{assmtData.sleepPattern}}"
           label="Sleep Pattern"
           label2="What is your sleeping habit i.e. bedtime & waking time">
         </guuey-text-input>
 
         <guuey-text-input
-          route="/homes/[[home]]/patients/[[patient]]/preAdmissionAssessment/hospitalRiskAssessment"
+          value="{{assmtData.hospitalRiskAssessment}}"
           label="Hospital Risk Assessment"
           label2="i.e. is there a health clinical record">
         </guuey-text-input>
 
         <guuey-text-input
-          route="/homes/[[home]]/patients/[[patient]]/preAdmissionAssessment/mappa"
+          value="{{assmtData.mappa}}"
           label="MAPPA"
           label2="i.e. multi-agency protection arrangement">
         </guuey-text-input>
